tests/machine/x/hs/json_builtin.error

/workspace/mochi/tests/machine/x/hs/json_builtin.hs:110:25: error:
    • Ambiguous type variable ‘a0’ arising from the literal ‘1’
      prevents the constraint ‘(Num a0)’ from being solved.
      Relevant bindings include
        m :: Map.Map String a0
          (bound at /workspace/mochi/tests/machine/x/hs/json_builtin.hs:110:1)
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      Potentially matching instances:
        instance Num Integer -- Defined in ‘GHC.Num’
        instance Num Double -- Defined in ‘GHC.Float’
        ...plus three others
        ...plus four instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the expression: 1
      In the expression: ("a", 1)
      In the first argument of ‘Map.fromList’, namely
        ‘[("a", 1), ("b", 2)]’
    |
110 | m = Map.fromList [("a", 1), ("b", 2)]
    |                         ^

/workspace/mochi/tests/machine/x/hs/json_builtin.hs:114:3: error:
    • Ambiguous type variable ‘a0’ arising from a use of ‘_json’
      prevents the constraint ‘(Aeson.ToJSON a0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      Potentially matching instances:
        instance Aeson.ToJSON Aeson.Key
          -- Defined in ‘aeson-2.1.2.1:Data.Aeson.Types.ToJSON’
        instance Aeson.ToJSON Aeson.DotNetTime
          -- Defined in ‘aeson-2.1.2.1:Data.Aeson.Types.ToJSON’
        ...plus 29 others
        ...plus 77 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In a stmt of a 'do' block: _json m
      In the expression: do _json m
      In an equation for ‘main’: main = do _json m
    |
114 |   _json m
    |   ^^^^^


Context around line 110:
  108| _json v = BSL.putStrLn (Aeson.encode v)
  109| 
  110| m = Map.fromList [("a", 1), ("b", 2)]
  111| 
  112| main :: IO ()
